2009-11-04  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control: fix dependencies, not necesary mysql-server, because the
	mysql can install in another machine.

2009-11-04  Ramon Novoa  <rnovoa@artica.es>

	* godmode/snmpconsole/snmp_alert.php: An agent, OID and custom OID may
	  be specified at the same time.

2009-11-04  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/alerts_status.php: different colour for table header.

	* operation/agentes/tactical.php: Use red colour from tango palette.

	* godmode/alerts/alert_lists.php, godmode/alerts/alert_compounds.php,
	godmode/alerts/configure_alerts.php: Added text if no alerts defined.

	* Changelog: Added missed change.

	* DEBIAN/make_deb_package.sh: Small change from rc1 to rc2.

2009-11-04  Miguel de Dios <miguel.dedios@artica.es>
	* DEBIAN/make_deb_package.sh: simplify the source code of script.

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/alerts/alert_list.php: fix notice alert php describe in the
	tracker of sourceforge.
	* godmode/alerts/alert_compounds.php: fix the SQL query bug in PHP when
	load this page without agent in Pandora.
	Fixes: 2891215

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/agentes/module_manager_editor_plugin.php: fix the size of field
	"Plugin parameters".
	Fixes: 2888996

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/users/configure_user.php: fix to set the admin user when
	you create new user.

2009-11-03  Miguel de Dios <miguel.dedios@artica.es>
	* DEBIAN/make_deb_package.sh: move the script to make the deb package into
	the DEBIAN and change some things into the sourcecode for the directory
	change.

2009-11-03  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/alerts/configure*.php: Improving integrity of 
	appareance in title.

	* godmode/alerts/alert_actions.php, godmode/alerts/alert_templates.php: 
	Added text if no action or template defined.

	* godmode/alerts/alert_list.php: Small fix
